--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Zumran Nain</title>
-		<link rel="shortcut icon" type="image/jpg" href="images/logo.jpg"/>
+		<link rel="shortcut icon" type="image/jpg" href="logo.jpg"/>
 		<link rel="shortcut icon" type="image/jpg" href="F"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
