--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <header>
                             <h1>Hi. I'm <strong>Zumran Nain</strong>.</h1>
                         </header>
-                        <p>And I'm a third year statistics student at <strong>University of Toronto</strong>, specializing in machine learning and statistics.</p>
+                        <p>And I'm a third year student at <strong>University of Toronto</strong>, specializing in machine learning and statistics.</p>
                         <a href="mailto:zumran.nain@mail.utoronto.ca" class="button large scrolly">Contact me!</a>
                     </div>
                 </div>
