--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-8 col-7-large col-12-medium">
                         <header>
                             <h1>Hi. I'm <strong>Zumran Nain</strong>.</h1>
-		            <h1><strong>An aspiring  <br>  <br>  <br> software engineer</strong>.</h1>
+		            <h1>I'm an aspiring <br><br> <strong> software engineer</strong>.</h1>
                         </header>
                         <p>And I'm a third year student at <strong>University of Toronto</strong>, specializing in machine learning and statistics.</p>
                         <a href="mailto:zumran.nain@mail.utoronto.ca" class="button large scrolly">Contact me!</a>
