--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                                 the school board's 15000 employees. Worked on writing Powershell script file to scan multiple school servers provided and
                                 generate a list of fileshares and administrators by breakdown of each individual server. 
                                 Troubleshooted, fixed production issues and condensed the code in several SQL reports at YRDSB such as Secondary School and Student Tranportation data.
-                            </p>
+                           Sample work can be found <a href="https://drive.google.com/drive/u/1/folders/1HvogseMBb4Zye947fmtSbaADAUI8gr6I"> here </a>
+				</p>
                         </article>
                     </div>
                     <div class="col-55">
