--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                 name of client and manager, General Ledger number and Credit limit. The application is expected to be used by
                                 the school board's 15000 employees. Worked on writing Powershell script file to scan multiple school servers provided and
                                 generate a list of fileshares and administrators by breakdown of each individual server. 
-                                Troubleshooted, fixed production issues and condensed the code in several SQL reports at YRDSB such as Secondary School and Student Tranportation data.
-                           Sample work can be found <a href="https://drive.google.com/drive/u/1/folders/1HvogseMBb4Zye947fmtSbaADAUI8gr6I"> here </a>
+                                Troubleshooted, fixed production issues and refactored the code in several SQL reports at YRDSB such as Secondary School and Student Tranportation data.
+                           
 				</p>
                         </article>
                     </div>
